fixed radius on add button mobile view

--- a/public/style.css
+++ b/public/style.css
@@ -172,7 +172,7 @@ form {
         position: relative;
         top: 31px;
         right: 6px;
-        border-radius: 25px;
+        border-radius: 9px;
     }
 
     .form-input {
